--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ userSettings.create=Create
 ############################### News ###############################
 news.get_data=Get Data!
 news.get_rss_data=Get RSS data
+news.data_stats=Data Stats
 
 ############################### Schedules ###############################
 userSettings.schedules=Schedules
